# xorciph

./: .gitignore  Cargo.toml  PKGBUILD  README.md  aur-build.sh  aur-publish.sh  encrypt.txt
.devcontainer/: devcontainer.json
benches/: encrypt_bench.rs
src/: lib.rs  main.rs
